--- a/Web-Triolingo/Pages/Lessons/Index.cshtml
+++ b/Web-Triolingo/Pages/Lessons/Index.cshtml
@@ -46,6 +46,7 @@
                 <td>
                     <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#panel" aria-controls="offcanvasRight">Add</button>
                     <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#panel" aria-controls="offcanvasRight">Update</button>
+                    <a asp-page="../QnA/Index" asp-route-id="@(item.Id)" class="btn btn-primary px-3">Câu hỏi</a>
                 </td>
             </tr>
         }
