--- a/Web-Triolingo/Pages/Lessons/Index.cshtml
+++ b/Web-Triolingo/Pages/Lessons/Index.cshtml
@@ -4,60 +4,115 @@
     Layout = "_Layout";
     ViewData["Title"] = "Lesson page";
 }
-<h1>This is lesson page</h1>
-<table class="table">
-    <thead>
-        <tr>
-            <th>Id</th>
-            <th>Name</th>
-            <th>UnitId</th>
-            <th>TypeId</th>
-            <th>Description</th>
-            <th>Note</th>
-            <th>Status</th>
-            <th>Options</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model.ListAllLesson)
-        {
-            <tr>
-                <td>
-                    <p>@item.Id</p>
-                </td>
-                <td>
-                    <p>@item.Name</p>
-                </td>
-                <td>
-                    <p>@item.UnitId</p>
-                </td>
-                <td>
-                    <p>@item.TypeId</p>
-                </td>
-                <td>
-                    <p>@item.Description</p>
-                </td>
-                <td>
-                    <p>@item.Note</p>
-                </td>
-                <td>
-                    <p>@item.Status</p>
-                </td>
-                <td>
-                    <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#panel" aria-controls="offcanvasRight">Add</button>
-                    <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#panel" aria-controls="offcanvasRight">Update</button>
-                </td>
-            </tr>
-        }
-    </tbody>
-</table>
-<div class="offcanvas offcanvas-end" tabindex="-1" id="panel">
-    <div class="offcanvas-header">
-        <h5 class="offcanvas-title">Offcanvas right</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+<h2 class="text-uppercase">Quản lý môn học</h2>
+<div class="row p-0">
+    <div class="col-md-4 col-12">
+        <div class="card">
+            <h5 class="card-header bg-transparent text-uppercase">Danh sách</h5>
+            <div class="boxscroll card-body">
+                <table class="table table-hover ">
+                    <thead>
+                        <tr class="table-primary">
+                            <th>#</th>
+                            <th>Tên</th>
+                            <th>Ghi chú</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @if (Model.ListAllLesson != null)
+                        {
+                            int count = 1;
+                            @foreach (var item in Model.ListAllLesson)
+                            {
+                                <tr onclick="ShowDetail(@count)">
+                                    <td>
+                                        @count
+                                        <form id="form-@count" method="post" hidden asp-page-handler="LessonById">
+                                            <input type="number" name="Id" value="@item.Id" />
+                                        </form>
+                                    </td>
+                                    <td>@item.Name</td>
+                                    <td>@item.Description</td>
+                                </tr>
+                            }
+                            count++;
+                        }
+                    </tbody>
+                </table>
+            </div>
+            <div class="card-footer bg-transparent d-flex justify-content-between align-content-center">
+                <div>
+                    <select class="form-select">
+                        <option selected>15</option>
+                        <option value="1">30</option>
+                        <option value="2">50</option>
+                        <option value="3">100</option>
+                    </select>
+                </div>
+                <ul class="pagination m-0">
+                    <li class="page-item">
+                        <a class="page-link" href="#" aria-label="Previous">
+                            <span aria-hidden="true">&laquo;</span>
+                        </a>
+                    </li>
+                    <li class="page-item"><a class="page-link" href="#">1</a></li>
+                    <li class="page-item"><a class="page-link" href="#">2</a></li>
+                    <li class="page-item"><a class="page-link" href="#">3</a></li>
+                    <li class="page-item">
+                        <a class="page-link" href="#" aria-label="Next">
+                            <span aria-hidden="true">&raquo;</span>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </div>
-    <div class="offcanvas-body">
-        ...
+    <div class="col-md-8 col-12">
+        <div class="card">
+            <h5 class="card-header bg-transparent text-uppercase">Chi tiết</h5>
+            <form id="form-editor" method="post" class="card-body boxscroll" asp-page-handler="save">
+                <div class="mb-3 row">
+                    <label for="name" class="col-sm-2 col-form-label">Tên<span class="text-danger">*</span></label>
+                    <div class="col-sm-10">
+                        <input type="number" hidden asp-for="Lesson.Id" />
+                        <input asp-for="Lesson.Name" type="text" class="form-control" id="name">
+                    </div>
+                </div>
+                <div class="mb-3 row">
+                    <label for="editor" class="col-sm-2 col-form-label">Unit<span class="text-danger">*</span></label>
+                    <div class="col-sm-10">
+                        <input type="text" id="unit" asp-for="Lesson.UnitId" />
+                    </div>
+                </div>
+                <div class="mb-3 row">
+                    <label for="editor" class="col-sm-2 col-form-label">Type<span class="text-danger">*</span></label>
+                    <div class="col-sm-10">
+                        <input type="text" id="type" asp-for="Lesson.TypeId" />
+                    </div>
+                </div>
+                <div class="mb-3 row">
+                    <label for="editor" class="col-sm-2 col-form-label">Mô tả<span class="text-danger">*</span></label>
+                    <div class="col-sm-10">
+                        <textarea id="editor" asp-for="Lesson.Description"></textarea>
+                    </div>
+                </div>
+                <div class="mb-3 row">
+                    <label for="note" class="col-sm-2 col-form-label">Ghi chú</label>
+                    <div class="col-sm-10">
+                        <textarea class="form-control w-100" id="note" asp-for="Lesson.Note"></textarea>
+                    </div>
+                </div>
+                <button type="submit" class="btn btn-primary px-3" hidden id="saveBtn">Lưu</button>
+            </form>
+            <div class="row card-footer border-0 bg-transparent justify-content-between align-content-center row-cols-md-4 row-cols-2">
+                <div class="col">
+                    <button id="Add" type="button" class="btn btn-primary px-3">Thêm</button>
+                </div>
+                <div class="col"><button type="button" class="btn btn-primary px-3" id="fakeSaveBtn">Lưu</button></div>
+                <div class="col"><button type="button" class="btn btn-primary px-3" id="disabledMode">Hủy</button></div>
+                <div class="col"><button type="button" class="btn btn-primary px-3">Import</button></div>
+            </div>
+        </div>
     </div>
 </div>
 
@@ -71,4 +126,13 @@
     <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.2/dist/jquery.validate.min.js"></script>
     <script src="~/js/Login/Login.js"></script>
+    <script>
+        function ShowDetail(count) {
+            $('#form-' + count).submit()
+        }
+        $('#Add').on('click', function(){
+            $('#form-editor').attr('asp-page-handler', 'Add')
+            $('#form-editor').submit();
+        })
+    </script>
 }
