--- a/Web-Triolingo/Pages/QnA/Index.cshtml
+++ b/Web-Triolingo/Pages/QnA/Index.cshtml
@@ -93,7 +93,7 @@
                 <div class="mb-3 row">
                     <label for="editor" class="col-sm-2 col-form-label">Mô tả<span class="text-danger">*</span></label>
                     <div class="col-sm-10">
-                        <select class="form-select" asp-for="Question.TypeId" asp-items="@(Model.Settings)">
+                        @*<select class="form-select" asp-for="Question.TypeId" asp-items="@Model.Settings">*@
                         </select>
                     </div>
                 </div>
