--- a/Web-Triolingo/Pages/Lessons/Index.cshtml
+++ b/Web-Triolingo/Pages/Lessons/Index.cshtml
@@ -34,8 +34,8 @@
                                     <td>@item.Name</td>
                                     <td>@item.Description</td>
                                 </tr>
+                                count++;
                             }
-                            count++;
                         }
                     </tbody>
                 </table>
@@ -70,7 +70,7 @@
     <div class="col-md-8 col-12">
         <div class="card">
             <h5 class="card-header bg-transparent text-uppercase">Chi tiết</h5>
-            <form id="form-editor" method="post" class="card-body boxscroll" asp-page-handler="save">
+            <form id="form-editor" method="post" class="card-body boxscroll" asp-page-handler="add">
                 <div class="mb-3 row">
                     <label for="name" class="col-sm-2 col-form-label">Tên<span class="text-danger">*</span></label>
                     <div class="col-sm-10">
@@ -82,12 +82,6 @@
                     <label for="editor" class="col-sm-2 col-form-label">Unit<span class="text-danger">*</span></label>
                     <div class="col-sm-10">
                         <input type="text" id="unit" asp-for="Lesson.UnitId" />
-                    </div>
-                </div>
-                <div class="mb-3 row">
-                    <label for="editor" class="col-sm-2 col-form-label">Type<span class="text-danger">*</span></label>
-                    <div class="col-sm-10">
-                        <input type="text" id="type" asp-for="Lesson.TypeId" />
                     </div>
                 </div>
                 <div class="mb-3 row">
@@ -128,6 +122,7 @@
     <script src="~/js/Login/Login.js"></script>
     <script>
         function ShowDetail(count) {
+            debugger
             $('#form-' + count).submit()
         }
         $('#Add').on('click', function(){
