--- a/Web-Triolingo/wwwroot/css/Settings/SettingStyle.css
+++ b/Web-Triolingo/wwwroot/css/Settings/SettingStyle.css
@@ -1,4 +1,4 @@
-﻿.accordion {
+﻿/*.accordion {
     background-color: #eee;
     color: #444;
     cursor: pointer;
@@ -18,13 +18,13 @@
 
 .panel {
     display: contents;
-}
+}*/
 
 /*.panel-active {
     display: contents;
 }*/
 
-    .panel-active td {
+    /*.panel-active td {
         padding-left: 10px;
         width: 10px;
-    }
+    }*/
